crates/reinhardt-pages/tests/ui/page/fail/custom_event_invalid_syntax.rs
//! Custom intrinsic events require a string literal name.

// reinhardt-fmt: ignore-all

use reinhardt_pages::page;

fn main() {
	let _invalid = page!(|| {
		div { @custom(item_selected): |_| {}, }
	});
}
